corrected the colors to be more visible

--- a/style.css
+++ b/style.css
@@ -5,15 +5,15 @@ html {
 body {
   width: 80rem;
   margin: 0 auto;
-  background-color: #002fff;
+  background-color: #e4e4e4;
 }
 
 h1 {
   font-size: 4rem;
   text-align: center;
   font-family: "Bungee Shade", cursive;
-  color: #ffffff;
-  text-shadow: 0 0 5px #ffae00;
+  color: #000000;
+  text-shadow: 0 0 5px #ff0000;
 }
 
 .searchContainer {
@@ -30,7 +30,7 @@ h1 {
 .searchInput {
   height: 2rem;
   width: 25rem;
-  box-shadow: 0 0 5px #ffae00;
+  box-shadow: 0 0 5px #ff0000;
   font-family: "Montserrat", sans-serif;
   margin: 0 0.2rem;
 }
@@ -73,7 +73,7 @@ img {
   justify-content: center;
 }
 .tagButton {
-  text-shadow: 0 0 5px #ffae00;
+  text-shadow: 0 0 5px #ff0000;
   font-family: "Montserrat", sans-serif;
   font-size: medium;
   margin: 0.5rem;
@@ -99,13 +99,13 @@ img {
   background-color: #000000;
   margin: auto;
   padding: 20px;
-  border: 1px solid #ffae00;
+  border: 1px solid #ff0000;
   width: 50%;
 }
 
 /* The Close Button */
 .close {
-  color: #ffae00;
+  color: #ff0000;
   float: right;
   font-size: 28px;
   font-weight: bold;
@@ -113,7 +113,7 @@ img {
 
 .close:hover,
 .close:focus {
-  color: rgb(0, 4, 255);
+  color: rgba(255, 255, 255, 0.5);
   text-decoration: none;
   cursor: pointer;
 }
@@ -133,7 +133,7 @@ select {
 /* Style the submit button */
 .submitButton {
   width: 100%;
-  background-color: #002fff;
+  background-color: #ffffff80;
   color: white;
   padding: 14px 20px;
   margin: 8px 0;
@@ -144,5 +144,5 @@ select {
 
 /* Add a background color to the submit button on mouse-over */
 .submitButton :hover {
-  background-color: #ffae00;
+  background-color: #ff0000;
 }
